--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
           <span ng-hide="post.link">
             {{post.title}}
           </span>
+          <span>
+            <a href="#/posts/{{$index}}">Comments</a>
+          </span>
         </span>
       </div>
 
@@ -38,6 +41,36 @@
         </div>
         <div class="form-group">
           <input type="text" class="form-control" placeholder="Link" ng-model="link"></input>
+        </div>
+        <button type="submit" class="btn btn-primary">Post</button>
+      </form>
+    </script>
+    <script type="text/ng-template" id="/posts.html">
+      <div class="page-header">
+        <h3>
+          <a ng-show="post.link" href="{{post.link}}">
+            {{post.title}}
+          </a>
+          <span ng-hide="post.link">
+            {{post.title}}
+          </span>
+        </h3>
+      </div>
+
+      <div ng-repeat="comment in post.comments | orderyBy: '-upvotes'">
+        <span class="glyphicon glyphicon-thumbs-up" ng-click="incrementUpvotes(comment)"></span>
+        {{comment.upvotes}} - by {{comment.author}}
+        <span style="font-size:20px; margin-left:10px;">
+          {{comment.body}}
+        </span>
+      </div>
+
+      <form ng-submit="addComment()"
+        style="margin-top:30px;">
+        <h3>Add a new comment</h3>
+
+        <div class="form-group">
+          <input type="text" class="form-control" placeholder="Comment" ng-model="body"></input>
         </div>
         <button type="submit" class="btn btn-primary">Post</button>
       </form>
